syntax = "proto3";

package chat;

option java_package = "com.proto.chat";
option java_multiple_files = true;

//Chat request
message ChatRequest {
    string first_name = 1;
    string last_name = 2;
    string content = 3;
}

//Chat response
message ChatResponse {
    string result = 1;
}

//Defines chat service
service ChatService {
    //Unary gRPC
    rpc UnaryChat(ChatRequest) returns (ChatResponse) {};

    //Server streaming gRPC
    rpc ServerStreamingChat(ChatRequest) returns (stream ChatResponse) {};

    //Client streaming gRPC
    rpc ClientStreamingChat(stream ChatRequest) returns (ChatResponse) {};

    //Bidirectional streaming gRPC
    rpc BiDirectionalChat(stream ChatRequest) returns (stream ChatResponse) {};              

}

